// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`end-to-end integration prints error and help message when no arguments given 1`] = `
"purl <args> uri [...uri]

Options:
      --version  Show version number                                   [boolean]
  -w, --width    max width of final output                [number] [default: 80]
  -i, --indent   indent width for each line                [number] [default: 2]
      --help     Show help                                             [boolean]

Not enough non-option arguments: got 0, need at least 1"
`;

exports[`end-to-end integration prints formatted output for a URL 1`] = `
"<!DOCTYPE html>
<html>
  <head>
    <meta charset=\\"utf-8\\" />
    <title>Sample Web Page</title>
  </head>
  <body>
    <h1>Sample Web Page</h1>
    <p>
      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean aliquet
      molestie vestibulum. Nunc malesuada lobortis mi et commodo. Aenean at diam
      non lectus porta laoreet. Curabitur in aliquam augue. Sed in maximus
      ligula. Suspendisse iaculis tincidunt varius. In sit amet nulla in erat
      consequat tempor. Praesent eget urna ornare, mattis magna et, interdum
      nisl. Proin non mi sed ligula mattis consectetur. Sed sagittis nisl mollis
      felis sollicitudin lobortis. Praesent rhoncus turpis id viverra gravida.
      Pellentesque consequat turpis ut ex commodo, in volutpat ligula tristique.
      Vestibulum mi nisl, accumsan vel cursus non, semper quis lectus. Fusce at
      justo vitae justo eleifend auctor. Sed nisi diam, dapibus interdum luctus
      mattis, venenatis sit amet orci. Vivamus tempus tellus nibh, et varius
      lectus rhoncus eget.
    </p>
  </body>
</html>
"
`;

exports[`end-to-end integration prints formatted output for a URL and filename 1`] = `
"<!DOCTYPE html>
<html>
  <head>
    <meta charset=\\"utf-8\\" />
    <title>Sample Web Page</title>
  </head>
  <body>
    <h1>Sample Web Page</h1>
    <p>
      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean aliquet
      molestie vestibulum. Nunc malesuada lobortis mi et commodo. Aenean at diam
      non lectus porta laoreet. Curabitur in aliquam augue. Sed in maximus
      ligula. Suspendisse iaculis tincidunt varius. In sit amet nulla in erat
      consequat tempor. Praesent eget urna ornare, mattis magna et, interdum
      nisl. Proin non mi sed ligula mattis consectetur. Sed sagittis nisl mollis
      felis sollicitudin lobortis. Praesent rhoncus turpis id viverra gravida.
      Pellentesque consequat turpis ut ex commodo, in volutpat ligula tristique.
      Vestibulum mi nisl, accumsan vel cursus non, semper quis lectus. Fusce at
      justo vitae justo eleifend auctor. Sed nisi diam, dapibus interdum luctus
      mattis, venenatis sit amet orci. Vivamus tempus tellus nibh, et varius
      lectus rhoncus eget.
    </p>
  </body>
</html>

<!DOCTYPE html>
<html>
  <head>
    <meta charset=\\"utf-8\\" />
    <title>Sample Web Page</title>
  </head>
  <body>
    <h1>Sample Web Page</h1>
    <p>
      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean aliquet
      molestie vestibulum. Nunc malesuada lobortis mi et commodo. Aenean at diam
      non lectus porta laoreet. Curabitur in aliquam augue. Sed in maximus
      ligula. Suspendisse iaculis tincidunt varius. In sit amet nulla in erat
      consequat tempor. Praesent eget urna ornare, mattis magna et, interdum
      nisl. Proin non mi sed ligula mattis consectetur. Sed sagittis nisl mollis
      felis sollicitudin lobortis. Praesent rhoncus turpis id viverra gravida.
      Pellentesque consequat turpis ut ex commodo, in volutpat ligula tristique.
      Vestibulum mi nisl, accumsan vel cursus non, semper quis lectus. Fusce at
      justo vitae justo eleifend auctor. Sed nisi diam, dapibus interdum luctus
      mattis, venenatis sit amet orci. Vivamus tempus tellus nibh, et varius
      lectus rhoncus eget.
    </p>
  </body>
</html>
"
`;

exports[`end-to-end integration prints formatted output for a filename 1`] = `
"<!DOCTYPE html>
<html>
  <head>
    <meta charset=\\"utf-8\\" />
    <title>Sample Web Page</title>
  </head>
  <body>
    <h1>Sample Web Page</h1>
    <p>
      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean aliquet
      molestie vestibulum. Nunc malesuada lobortis mi et commodo. Aenean at diam
      non lectus porta laoreet. Curabitur in aliquam augue. Sed in maximus
      ligula. Suspendisse iaculis tincidunt varius. In sit amet nulla in erat
      consequat tempor. Praesent eget urna ornare, mattis magna et, interdum
      nisl. Proin non mi sed ligula mattis consectetur. Sed sagittis nisl mollis
      felis sollicitudin lobortis. Praesent rhoncus turpis id viverra gravida.
      Pellentesque consequat turpis ut ex commodo, in volutpat ligula tristique.
      Vestibulum mi nisl, accumsan vel cursus non, semper quis lectus. Fusce at
      justo vitae justo eleifend auctor. Sed nisi diam, dapibus interdum luctus
      mattis, venenatis sit amet orci. Vivamus tempus tellus nibh, et varius
      lectus rhoncus eget.
    </p>
  </body>
</html>
"
`;

exports[`end-to-end integration prints formatted output for multiple filenames 1`] = `
"<!DOCTYPE html>
<html>
  <head>
    <meta charset=\\"utf-8\\" />
    <title>Sample Web Page</title>
  </head>
  <body>
    <h1>Sample Web Page</h1>
    <p>
      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean aliquet
      molestie vestibulum. Nunc malesuada lobortis mi et commodo. Aenean at diam
      non lectus porta laoreet. Curabitur in aliquam augue. Sed in maximus
      ligula. Suspendisse iaculis tincidunt varius. In sit amet nulla in erat
      consequat tempor. Praesent eget urna ornare, mattis magna et, interdum
      nisl. Proin non mi sed ligula mattis consectetur. Sed sagittis nisl mollis
      felis sollicitudin lobortis. Praesent rhoncus turpis id viverra gravida.
      Pellentesque consequat turpis ut ex commodo, in volutpat ligula tristique.
      Vestibulum mi nisl, accumsan vel cursus non, semper quis lectus. Fusce at
      justo vitae justo eleifend auctor. Sed nisi diam, dapibus interdum luctus
      mattis, venenatis sit amet orci. Vivamus tempus tellus nibh, et varius
      lectus rhoncus eget.
    </p>
  </body>
</html>

<!DOCTYPE html>
<html>
  <head>
    <meta charset=\\"utf-8\\" />
    <title>Sample Web Page</title>
  </head>
  <body>
    <h1>Sample Web Page</h1>
    <p>
      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean aliquet
      molestie vestibulum. Nunc malesuada lobortis mi et commodo. Aenean at diam
      non lectus porta laoreet. Curabitur in aliquam augue. Sed in maximus
      ligula. Suspendisse iaculis tincidunt varius. In sit amet nulla in erat
      consequat tempor. Praesent eget urna ornare, mattis magna et, interdum
      nisl. Proin non mi sed ligula mattis consectetur. Sed sagittis nisl mollis
      felis sollicitudin lobortis. Praesent rhoncus turpis id viverra gravida.
      Pellentesque consequat turpis ut ex commodo, in volutpat ligula tristique.
      Vestibulum mi nisl, accumsan vel cursus non, semper quis lectus. Fusce at
      justo vitae justo eleifend auctor. Sed nisi diam, dapibus interdum luctus
      mattis, venenatis sit amet orci. Vivamus tempus tellus nibh, et varius
      lectus rhoncus eget.
    </p>
  </body>
</html>
"
`;

exports[`end-to-end integration prints formatted output to specified width for --indent 1`] = `
"<!DOCTYPE html>
<html>
    <head>
        <meta charset=\\"utf-8\\" />
        <title>Sample Web Page</title>
    </head>
    <body>
        <h1>Sample Web Page</h1>
        <p>
            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean
            aliquet molestie vestibulum. Nunc malesuada lobortis mi et commodo.
            Aenean at diam non lectus porta laoreet. Curabitur in aliquam augue.
            Sed in maximus ligula. Suspendisse iaculis tincidunt varius. In sit
            amet nulla in erat consequat tempor. Praesent eget urna ornare,
            mattis magna et, interdum nisl. Proin non mi sed ligula mattis
            consectetur. Sed sagittis nisl mollis felis sollicitudin lobortis.
            Praesent rhoncus turpis id viverra gravida. Pellentesque consequat
            turpis ut ex commodo, in volutpat ligula tristique. Vestibulum mi
            nisl, accumsan vel cursus non, semper quis lectus. Fusce at justo
            vitae justo eleifend auctor. Sed nisi diam, dapibus interdum luctus
            mattis, venenatis sit amet orci. Vivamus tempus tellus nibh, et
            varius lectus rhoncus eget.
        </p>
    </body>
</html>
"
`;

exports[`end-to-end integration prints formatted output to specified width for --width 1`] = `
"<!DOCTYPE html>
<html>
  <head>
    <meta charset=\\"utf-8\\" />
    <title>Sample Web Page</title>
  </head>
  <body>
    <h1>Sample Web Page</h1>
    <p>
      Lorem ipsum dolor sit amet,
      consectetur adipiscing elit.
      Aenean aliquet molestie
      vestibulum. Nunc malesuada
      lobortis mi et commodo. Aenean at
      diam non lectus porta laoreet.
      Curabitur in aliquam augue. Sed in
      maximus ligula. Suspendisse
      iaculis tincidunt varius. In sit
      amet nulla in erat consequat
      tempor. Praesent eget urna ornare,
      mattis magna et, interdum nisl.
      Proin non mi sed ligula mattis
      consectetur. Sed sagittis nisl
      mollis felis sollicitudin
      lobortis. Praesent rhoncus turpis
      id viverra gravida. Pellentesque
      consequat turpis ut ex commodo, in
      volutpat ligula tristique.
      Vestibulum mi nisl, accumsan vel
      cursus non, semper quis lectus.
      Fusce at justo vitae justo
      eleifend auctor. Sed nisi diam,
      dapibus interdum luctus mattis,
      venenatis sit amet orci. Vivamus
      tempus tellus nibh, et varius
      lectus rhoncus eget.
    </p>
  </body>
</html>
"
`;

exports[`end-to-end integration prints formatted output to specified width for -i 1`] = `
"<!DOCTYPE html>
<html>
    <head>
        <meta charset=\\"utf-8\\" />
        <title>Sample Web Page</title>
    </head>
    <body>
        <h1>Sample Web Page</h1>
        <p>
            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean
            aliquet molestie vestibulum. Nunc malesuada lobortis mi et commodo.
            Aenean at diam non lectus porta laoreet. Curabitur in aliquam augue.
            Sed in maximus ligula. Suspendisse iaculis tincidunt varius. In sit
            amet nulla in erat consequat tempor. Praesent eget urna ornare,
            mattis magna et, interdum nisl. Proin non mi sed ligula mattis
            consectetur. Sed sagittis nisl mollis felis sollicitudin lobortis.
            Praesent rhoncus turpis id viverra gravida. Pellentesque consequat
            turpis ut ex commodo, in volutpat ligula tristique. Vestibulum mi
            nisl, accumsan vel cursus non, semper quis lectus. Fusce at justo
            vitae justo eleifend auctor. Sed nisi diam, dapibus interdum luctus
            mattis, venenatis sit amet orci. Vivamus tempus tellus nibh, et
            varius lectus rhoncus eget.
        </p>
    </body>
</html>
"
`;

exports[`end-to-end integration prints formatted output to specified width for -w 1`] = `
"<!DOCTYPE html>
<html>
  <head>
    <meta charset=\\"utf-8\\" />
    <title>Sample Web Page</title>
  </head>
  <body>
    <h1>Sample Web Page</h1>
    <p>
      Lorem ipsum dolor sit amet,
      consectetur adipiscing elit.
      Aenean aliquet molestie
      vestibulum. Nunc malesuada
      lobortis mi et commodo. Aenean at
      diam non lectus porta laoreet.
      Curabitur in aliquam augue. Sed in
      maximus ligula. Suspendisse
      iaculis tincidunt varius. In sit
      amet nulla in erat consequat
      tempor. Praesent eget urna ornare,
      mattis magna et, interdum nisl.
      Proin non mi sed ligula mattis
      consectetur. Sed sagittis nisl
      mollis felis sollicitudin
      lobortis. Praesent rhoncus turpis
      id viverra gravida. Pellentesque
      consequat turpis ut ex commodo, in
      volutpat ligula tristique.
      Vestibulum mi nisl, accumsan vel
      cursus non, semper quis lectus.
      Fusce at justo vitae justo
      eleifend auctor. Sed nisi diam,
      dapibus interdum luctus mattis,
      venenatis sit amet orci. Vivamus
      tempus tellus nibh, et varius
      lectus rhoncus eget.
    </p>
  </body>
</html>
"
`;

exports[`end-to-end integration prints help message when --help given 1`] = `
"purl <args> uri [...uri]

Options:
      --version  Show version number                                   [boolean]
  -w, --width    max width of final output                [number] [default: 80]
  -i, --indent   indent width for each line                [number] [default: 2]
      --help     Show help                                             [boolean]"
`;
